# Polyfuck

./: .env.example  .gitignore  .replit  README.md  pyproject.toml  requirements.txt
config/: .env.example
src/: bot.py  config.py
src/backtest/: backtest.py
src/positions/: positions.py
src/redemption/: __init__.py  redemption.py
src/scanner/: correlated_arbitrage.py  liquidity_sniper.py  mispricing.py  near_resolved.py  scanner.py
src/scripts/: setup_wallet.py
src/strategies/: __init__.py  orchestrator.py
src/trader/: trader.py
src/utils/: api.py  db.py  deposit.py  formatting.py  opportunity_logger.py  swap_usdc.py  wallet_balance.py
src/wallet/: __main__.py  unlock.py  wallet.py
tests/: test_bot.py
