[project]
name = "clawbots-polymarket-bot"
version = "0.1.0"
description = "ClawBots Polymarket trading bot with mispricing detection and safe position management"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "YAPER", email = "lilmutants@proton.me"},
]

dependencies = [
    "py-clob-client-v2>=1.0.1",
    "web3>=6.0.0",
    "eth-account>=0.10.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]

[project.scripts]
clawbots-polymarket-bot = "src.bot:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]